no related videos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         This animation features a wineglass as it strikes a ceramic tile floor. Specular and displacement maps were used to get the proper reflections off the floor.
                     </div>
                     <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/shatter_blur.jpg')"></div></div>
-                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/TTHIgaAs6j4" frameborder="0" allowfullscreen></iframe></div>
+                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/TTHIgaAs6j4?rel=0" frameborder="0" allowfullscreen></iframe></div>
                 </div>
             </div>
             <div class="project clickable item1 col-lg-4 col-sm-4 col-xs-12 animation">
@@ -59,7 +59,7 @@
                         This is a test of Blender's fluid simulation engine. Two subdivisions and a resolution of 250 were used.
                     </div>
                     <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/wine_blur.jpg')"></div></div>
-                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/NJ-dqUoVzbY" frameborder="0" allowfullscreen></iframe></div>
+                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/NJ-dqUoVzbY?rel=0" frameborder="0" allowfullscreen></iframe></div>
                 </div>
             </div>
             <div class="project clickable item1 col-lg-4 col-sm-4 col-xs-12 animation">
@@ -71,7 +71,7 @@
                         A 3D model was used to compose the exterior elements of the space ship.
                     </div>
                     <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/SI_blur.jpg')"></div></div>
-                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/IBm8ktlMb5k" frameborder="0" allowfullscreen></iframe></div>
+                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/IBm8ktlMb5k?rel=0" frameborder="0" allowfullscreen></iframe></div>
                 </div>
             </div>
             <div class="project clickable item2 col-lg-8 col-sm-8 col-xs-12 animation">
@@ -83,7 +83,7 @@
                         The animation was a test with various glass, mirror, and glossy shaders. The table was created by generating diffuse, normal, specular, displacement, and occlusion maps from an image.
                     </div>
                     <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/collidingballs_blur.jpg')"></div></div>
-                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/bN7f2PzRlzA" frameborder="0" allowfullscreen></iframe></div>
+                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/bN7f2PzRlzA?rel=0" frameborder="0" allowfullscreen></iframe></div>
                 </div>
             </div>
 
@@ -96,7 +96,7 @@
                         I created and textured a 3D model of a safe (seen in the first shot) and motion tracked it into the scene. I also designed and set up camera rigs which were used in the production of this film.
                     </div>
                     <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/roosevelt_blur.jpg')"></div></div>
-                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/I_llkXGkomk" frameborder="0" allowfullscreen></iframe></div>
+                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/I_llkXGkomk?rel=0" frameborder="0" allowfullscreen></iframe></div>
                 </div>
             </div>
             <div class="project clickable item1 col-lg-4 col-sm-4 col-xs-12 film">
@@ -115,7 +115,7 @@
                         <a href="http://twitter.com/prebirthmovie">twitter</a>
                     </div>
                     <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/prebirth_blur.jpg')"></div></div>
-                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/jitxqJj-oe4" frameborder="0" allowfullscreen></iframe></div>
+                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/jitxqJj-oe4?rel=0" frameborder="0" allowfullscreen></iframe></div>
                 </div>
             </div>
             <div class="project clickable item2 col-lg-8 col-sm-8 col-xs-12 photography" id="fall">
@@ -209,7 +209,7 @@
                         A test of a script I wrote for After Effects. It tries to separate moving objects from stationary objects in a scene in order to eliminate the need for greenscreen or rotoscoping.
                     </div>
                     <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/freeze_blur.jpg')"></div></div>
-                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/3KSTsC1ILrU" frameborder="0" allowfullscreen></iframe></div>
+                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/3KSTsC1ILrU?rel=0" frameborder="0" allowfullscreen></iframe></div>
                 </div>
             </div>
             <div class="project clickable item1 col-lg-4 col-sm-4 col-xs-12 animation">
@@ -219,7 +219,7 @@
                         A test of a script I wrote for After Effects. It tracks the Spherize effect to one or more point sources. In this video, the distortion created by each orb follows the orb's movement.
                     </div>
                     <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/orb_blur.jpg')"></div></div>
-                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/Sv2NGdmmvc0" frameborder="0" allowfullscreen></iframe></div>
+                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/Sv2NGdmmvc0?rel=0" frameborder="0" allowfullscreen></iframe></div>
                 </div>
             </div>
 
@@ -232,7 +232,7 @@
                         I also designed and built a dolly track which was used many times in the production of this film.
                     </div>
                     <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/stringTheory_blur.jpg')"></div></div>
-                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/o_mu2f7fKKA" frameborder="0" allowfullscreen></iframe></div>
+                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/o_mu2f7fKKA?rel=0" frameborder="0" allowfullscreen></iframe></div>
                 </div>
             </div>
 
@@ -257,7 +257,7 @@
                     <div class="description">
                         <div>Web Design</div><br />
                         <a href="http://www.stopmotionclub.com">stopmotionclub.com</a>
-                        <br/>
+                        <br/></br>
                         A website I designed to display the work of the film group I am part of, StopMotionClub
                         <br /><br />
                         Built with HTML, CSS, Javascript, and PHP
