fix youtube embed player breaking in firefox

--- a/index.html
+++ b/index.html
@@ -88,15 +88,19 @@
             </div>
 
             <div class="project clickable item1 col-lg-4 col-sm-4 col-xs-12 animation">
-                <div class="project-content"  style="background-image: url('projects/video/roosevelt.jpg');">
+                <div class="project-content"  style="background-image: url('projects/video/pr_effects.jpg');">
                     <div class="description">
                         <div>VFX</div><br />
-                        Project Roosevelt, a short action film which I worked on.
+                        Effects breakdown of Project Roosevelt, a short action film which I worked on.
                         <br /><br />
-                        I created and textured a 3D model of a safe (seen in the first shot) and motion tracked it into the scene. I also designed and set up camera rigs which were used in the production of this film.
+                        I created and textured a 3D model of a safe and motion tracked it into the scene. I also designed and set up camera rigs which were used in the production of this film.
+                        <br/>
+                        <a href="http://www.youtube.com/watch?v=I_llkXGkomk">Watch the film</a>
                     </div>
-                    <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/roosevelt_blur.jpg')"></div></div>
-                    <div class="gallery"><iframe class="video" data-src="//www.youtube.com/embed/I_llkXGkomk?rel=0" frameborder="0" allowfullscreen></iframe></div>
+                    <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/pr_effects_blur.jpg')"></div></div>
+                    <div class="gallery">
+                        <iframe class="video galPic" data-src="//www.youtube.com/embed/VOzyd_75XQ8?rel=0" frameborder="0" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
             <div class="project clickable item1 col-lg-4 col-sm-4 col-xs-12 film">
@@ -223,6 +227,17 @@
                 </div>
             </div>
 
+            <div class="project clickable item1 col-lg-4 col-sm-4 col-xs-12 film">
+                <div class="project-content"  style="background-image: url('projects/video/roosevelt.jpg');">
+                    <div class="description">
+                        <div>Film</div><br />
+                        Project Roosevelt: A film which questions the limits of children's imagination.
+
+                    </div>
+                    <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/roosevelt_blur.jpg')"></div></div>
+                    <div class="gallery"><iframe class="video galPic" data-src="//www.youtube.com/embed/I_llkXGkomk?rel=0" frameborder="0" allowfullscreen></iframe></div>
+                </div>
+            </div>
             <div class="project clickable item1 col-lg-4 col-sm-4 col-xs-12 film">
                 <div class="project-content"  style="background-image: url('projects/video/stringTheory.jpg');">
                     <div class="description">
