--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <span class="email"><a href="mailto:aeng@ctemc.org">aeng@ctemc.org</a></span>
+            <span class="email"><a href="austineng.inr@gmail.com">austineng.inr@gmail.com</a></span>
             <br />
             <span class="git"><a href="http://github.com/austinEng">http://github.com/austinEng</a></span>
         </div>
