--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: About
 custom_css: blog
 excerpt: Austin is student studying Digital Media Design at the UPenn and is submatriculating into the Computer Graphics and Game Technology Masters Program
 keywords: [about, austin eng, digital media design, computer graphics, computer science, animation, programming, engineering]
