Add more webgpu-samples redirects

--- a/webgpu-samples/index.html
+++ b/webgpu-samples/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WebGPU Samples</title>
+    <title>Redirecting - WebGPU Samples</title>
     <meta http-equiv="refresh" content="0;url=https://webgpu.github.io/webgpu-samples/" />
   </head>
   <body>
-    This page has to <a href="https://webgpu.github.io/webgpu-samples/">https://webgpu.github.io/webgpu-samples/</a>.
+    This page has moved to <a href="https://webgpu.github.io/webgpu-samples/">https://webgpu.github.io/webgpu-samples/</a>.
   </body>
 </html>
